--- a/LSBgenerator/LSBgenerator.csproj
+++ b/LSBgenerator/LSBgenerator.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetListSerilizer.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="Display.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -53,11 +55,25 @@
       <DependentUpon>Display.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainWindow_1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainWindow_1.Designer.cs">
+      <DependentUpon>MainWindow_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Fullimage.cs" />
+    <Compile Include="InlineImage.cs" />
+    <Compile Include="IRenderable.cs" />
+    <Compile Include="ITypesettable.cs" />
+    <Compile Include="LayoutMode.cs" />
+    <Compile Include="LiturgyLine.cs" />
+    <Compile Include="LiturgyLineState.cs" />
+    <Compile Include="LiturgySpeaker.cs" />
+    <Compile Include="MainWindow_UI2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainWindow_UI2.Designer.cs">
+      <DependentUpon>MainWindow_UI2.cs</DependentUpon>
     </Compile>
     <Compile Include="PowerPointRenderer.cs" />
     <Compile Include="Preview.cs">
@@ -67,18 +83,29 @@
       <DependentUpon>Preview.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectAsset.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadingLine.cs" />
+    <Compile Include="RenderFullImage.cs" />
+    <Compile Include="RenderInlineImage.cs" />
     <Compile Include="RenderLine.cs" />
     <Compile Include="RenderSlide.cs" />
+    <Compile Include="SermonTitle.cs" />
     <Compile Include="ServiceProject.cs" />
+    <Compile Include="Speaker.cs" />
     <Compile Include="StillFrameRenderer.cs" />
     <Compile Include="TextData.cs" />
     <Compile Include="TextRenderer.cs" />
+    <Compile Include="TextRendererLayout.cs" />
+    <Compile Include="TypesetCommand.cs" />
     <EmbeddedResource Include="Display.resx">
       <DependentUpon>Display.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainWindow_1.resx">
+      <DependentUpon>MainWindow_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainWindow_UI2.resx">
+      <DependentUpon>MainWindow_UI2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Preview.resx">
       <DependentUpon>Preview.cs</DependentUpon>
@@ -94,6 +121,8 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\DataSources\Form1.datasource" />
+    <None Include="Properties\DataSources\ProjectAsset.datasource" />
+    <None Include="Properties\DataSources\ServiceProject.datasource" />
     <None Include="Properties\DataSources\TextRenderer.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -109,15 +138,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <COMReference Include="MediaPlayer">
-      <Guid>{22D6F304-B0F6-11D0-94AB-0080C74C7E95}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
     <COMReference Include="Microsoft.Office.Core">
       <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
       <VersionMajor>2</VersionMajor>
@@ -133,42 +153,6 @@
       <VersionMinor>12</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="stdole">
-      <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="VBIDE">
-      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
-      <VersionMajor>5</VersionMajor>
-      <VersionMinor>3</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>primary</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="WMPDXMLib">
-      <Guid>{73F0DD5C-D071-46B6-A8BF-897C84EAAC49}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
-    <COMReference Include="WMPLib">
-      <Guid>{6BF52A50-394A-11D3-B153-00C04F79FAA6}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
