--- a/LSBgenerator/LSBgenerator.csproj
+++ b/LSBgenerator/LSBgenerator.csproj
@@ -33,8 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +47,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetListSerilizer.cs" />
@@ -104,6 +110,12 @@
     <Compile Include="TextRenderer.cs" />
     <Compile Include="TextRendererLayout.cs" />
     <Compile Include="TypesetCommand.cs" />
+    <Compile Include="Video Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Video Test.Designer.cs">
+      <DependentUpon>Video Test.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CommandHelpList.resx">
       <DependentUpon>CommandHelpList.cs</DependentUpon>
     </EmbeddedResource>
@@ -129,6 +141,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Video Test.resx">
+      <DependentUpon>Video Test.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\DataSources\Form1.datasource" />
     <None Include="Properties\DataSources\ProjectAsset.datasource" />
     <None Include="Properties\DataSources\ServiceProject.datasource" />
@@ -180,6 +195,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Slide33.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WpfControlLibrary1\WpfControlLibrary1.csproj">
+      <Project>{278186FE-1A8D-4B97-9C4E-6ECCE61E3292}</Project>
+      <Name>WpfControlLibrary1</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\video.mp4" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
