--- a/Presenter/Presenter.csproj
+++ b/Presenter/Presenter.csproj
@@ -52,4 +52,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FFmpeg.AutoGen" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
