--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -7,33 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ImageResources\apostlescreed.PNG" />
-    <None Remove="ImageResources\copyright.PNG" />
-    <None Remove="ImageResources\lordsprayer.PNG" />
-    <None Remove="ImageResources\series.PNG" />
-    <None Remove="ImageResources\services.PNG" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="ImageResources\apostlescreed.PNG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="ImageResources\lordsprayer.PNG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="ImageResources\series.PNG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="ImageResources\services.PNG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="ImageResources\copyright.PNG">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <ProjectReference Include="..\Xenon\Xenon.csproj" />
   </ItemGroup>
 
 </Project>
