--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -14,6 +14,10 @@
     <None Remove="BMDSwitcher\Mock\Images\organcam.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\rightcam.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\videofile.png" />
+    <None Remove="Icons\keyframepushleft.png" />
+    <None Remove="Icons\keyframepushright.png" />
+    <None Remove="Icons\keyframetobox.png" />
+    <None Remove="Icons\keyframetofill.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +48,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\videofile.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\keyframepushleft.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\keyframepushright.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\keyframetobox.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\keyframetofill.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
