--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -70,6 +70,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    <PackageReference Include="System.IO.Ports" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
