add icon to integreated presenter

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Integrated_Presenter</RootNamespace>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icon4.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
