improvements to presenter. Slides now can have actions sermon resets timer copyright prompts to record cleanup mock multiviewer (transparent liturgy, properly sized windows, better? screenshots)

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -18,9 +18,14 @@
   <ItemGroup>
     <None Remove="BMDSwitcher\Mock\Images\black.png" />
     <None Remove="BMDSwitcher\Mock\Images\centercam.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\centershot.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\leftcam.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\leftshot.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\leftshot1.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\organcam.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\organshot.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\rightcam.PNG" />
+    <None Remove="BMDSwitcher\Mock\Images\rightshot.PNG" />
     <None Remove="BMDSwitcher\Mock\Images\videofile.png" />
     <None Remove="Icons\keyframepushleft.png" />
     <None Remove="Icons\keyframepushright.png" />
@@ -46,13 +51,28 @@
     <Resource Include="BMDSwitcher\Mock\Images\centercam.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\centershot.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\leftcam.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\leftshot.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\leftshot1.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\organcam.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\organshot.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\rightcam.PNG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="BMDSwitcher\Mock\Images\rightshot.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="BMDSwitcher\Mock\Images\videofile.png">
