add lightweight test of hyperdeck record controls

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -97,4 +97,8 @@
     <PackageReference Include="System.IO.Ports" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HyperdeckControl\HyperdeckControl.csproj" />
+  </ItemGroup>
+
 </Project>
