--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Integrated_Presenter</RootNamespace>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon4.ico</ApplicationIcon>
