try adding some build scripting

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -7,6 +7,12 @@
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon4.ico</ApplicationIcon>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    <PublishSingleFile>True</PublishSingleFile>
+    <PublishReadyToRun>True</PublishReadyToRun>
+    <SelfContained>True</SelfContained>
+    <IsPortable>True</IsPortable>
+    <RuntimeIdentifier>win-x64-aot</RuntimeIdentifier>
+    <RuntimeIdentifiers>win-x64-aot</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
