add key support to slidepool. add default key

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -41,6 +41,7 @@
     <None Remove="Icons\keyframetobox.png" />
     <None Remove="Icons\keyframetofill.png" />
     <None Remove="Icons\Mute2.png" />
+    <None Remove="Keys\WhiteKey.png" />
     <None Remove="version.json" />
   </ItemGroup>
 
@@ -108,6 +109,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Icons\Mute2.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Keys\WhiteKey.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <EmbeddedResource Include="version.json">
