begin work parsing Lutheran Service Builder's output

--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LutheRun\LutheRun.csproj" />
     <ProjectReference Include="..\Xenon\Xenon.csproj" />
   </ItemGroup>
 
