--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LutheRun\LutheRun.csproj" />
+    <ProjectReference Include="..\UIControls\UIControls.csproj" />
     <ProjectReference Include="..\Xenon\Xenon.csproj" />
   </ItemGroup>
 
