Begin extraction of presentation/slides from IntegratedPresenter

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ATEMControl\ATEMControl.csproj" />
     <ProjectReference Include="..\MockSwitcher\MockSwitcher.csproj" />
+    <ProjectReference Include="..\PresentationEngine\PresentationEngine.csproj" />
   </ItemGroup>
 
 </Project>
