Extract switcher control seperate project. Extract config to seperate project.

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -124,4 +124,8 @@
     <PackageReference Include="System.IO.Ports" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
+  </ItemGroup>
+
 </Project>
