--- a/Integrated Presenter/Log4Net.config
+++ b/Integrated Presenter/Log4Net.config
@@ -4,8 +4,32 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <log4net>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+    <appender name="MainLogger" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs.txt"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="UserLogger" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_user.txt"/>
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="1MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="SwitcherLogger" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\\ProgramData\\Integrated Presenter\\Logs\\DLogs_switcher.txt"/>
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
@@ -18,7 +42,15 @@
     </appender>
     <root>
       <level value="ALL" />
-      <appender-ref ref="LogFileAppender" />
+      <appender-ref ref="MainLogger" />
     </root>
+    <logger addititvity="false" name="UserLogger">
+      <level value="ALL"/>
+      <appender-ref ref="UserLogger"/>
+    </logger>
+    <logger addititvity="false" name="SwitcherLogger">
+      <level value="ALL"/>
+      <appender-ref ref="SwitcherLogger"/>
+    </logger>
   </log4net>
 </configuration>
