--- a/SwitcherControl/SwitcherControl.csproj
+++ b/SwitcherControl/SwitcherControl.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
   </ItemGroup>
 
