Upgrade PIP controls. Mask slew and preset next fill source.

--- a/Integrated Presenter/Integrated Presenter.csproj
+++ b/Integrated Presenter/Integrated Presenter.csproj
@@ -13,6 +13,7 @@
     <IsPortable>True</IsPortable>
     <RuntimeIdentifier>win-x64-aot</RuntimeIdentifier>
     <RuntimeIdentifiers>win-x64-aot</RuntimeIdentifiers>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
