--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
