Extract build info. -> Upgraded to .Net 6.0

--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Integrated_Presenter</RootNamespace>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon4.ico</ApplicationIcon>
@@ -131,6 +131,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonVersionInfo\CommonVersionInfo.csproj" />
     <ProjectReference Include="..\SwitcherControl\SwitcherControl.csproj" />
   </ItemGroup>
 
