--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -10,19 +10,24 @@
 
   <ItemGroup>
     <None Remove="version.json" />
+    <None Remove="ViewControls\Images\Artist.png" />
     <None Remove="ViewControls\Images\Cardio.png" />
     <None Remove="ViewControls\Images\CloudDL.png" />
     <None Remove="ViewControls\Images\Delete.png" />
+    <None Remove="ViewControls\Images\DrawLayout.png" />
     <None Remove="ViewControls\Images\Export.png" />
     <None Remove="ViewControls\Images\Export2.png" />
     <None Remove="ViewControls\Images\File.png" />
     <None Remove="ViewControls\Images\Folder.png" />
     <None Remove="ViewControls\Images\Folder_light.png" />
     <None Remove="ViewControls\Images\musicnote.png" />
+    <None Remove="ViewControls\Images\PaintBrush.png" />
     <None Remove="ViewControls\Images\Pencil.png" />
+    <None Remove="ViewControls\Images\PenScribble.png" />
     <None Remove="ViewControls\Images\Plus.png" />
     <None Remove="ViewControls\Images\Question.png" />
     <None Remove="ViewControls\Images\RenderPaintCan.png" />
+    <None Remove="ViewControls\Images\RoundAdd.png" />
     <None Remove="ViewControls\Images\Save.png" />
     <None Remove="ViewControls\Images\Trash.png" />
   </ItemGroup>
@@ -47,6 +52,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="ViewControls\Images\Artist.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="ViewControls\Images\Cardio.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
@@ -54,6 +62,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="ViewControls\Images\Delete.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\DrawLayout.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="ViewControls\Images\Export.png">
@@ -74,7 +85,13 @@
     <Resource Include="ViewControls\Images\musicnote.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="ViewControls\Images\PaintBrush.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="ViewControls\Images\Pencil.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\PenScribble.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="ViewControls\Images\Plus.png">
@@ -84,6 +101,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="ViewControls\Images\RenderPaintCan.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="ViewControls\Images\RoundAdd.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="ViewControls\Images\Save.png">
